@@ -120,6 +120,7 @@ struct str_table mvars[] = {
     { M_COMPAN,  "$compan" },
     { M_XTXINV,  "$xtxinv" },
     { M_VMA,     "$vma" },
+    { M_FEVD,    "$fevd" },
     { M_JALPHA,  "$jalpha" }, 
     { M_JBETA,   "$jbeta" },
     { M_JVBETA,  "$jvbeta" },
