@@ -107,6 +107,7 @@ typedef enum {
     M_MATRIX_MAX, /* -- SEPARATOR, end of matrices -- */
     M_EC,         /* VECM error-correction terms */
     M_VMA,        /* VARs, VECMs: vector moving average representation */
+    M_FEVD,       /* VAR variance decomposition */
     M_MNLPROBS,   /* case probabilities for multinomial logit */
     M_MBUILD_MAX, /* -- SEPARATOR, end of matrix-builders -- */
     M_XLIST,      /* list of regressors */
