@@ -1284,6 +1284,8 @@ saved_object_build_matrix (const char *oname, int idx,
 	M = VECM_get_EC_matrix(smatch->ptr, Z, pdinfo, err);
     } else if (idx == M_VMA && smatch->type == GRETL_OBJ_VAR) {
 	M = gretl_VAR_get_vma_matrix(smatch->ptr, pdinfo, err);
+    } else if (idx == M_FEVD && smatch->type == GRETL_OBJ_VAR) {
+	M = gretl_VAR_get_fevd_matrix(smatch->ptr, pdinfo, err);
     } else {
 	*err = E_BADSTAT;
     }
