@@ -47,7 +47,7 @@ int VAR_wald_omit_tests (GRETL_VAR *var);
 
 gretl_matrix *VAR_coeff_matrix_from_VECM (const GRETL_VAR *var);
 
-gretl_matrix *reorder_responses (GRETL_VAR *var, int *err);
+gretl_matrix *reorder_responses (const GRETL_VAR *var, int *err);
 
 gretl_matrix *irf_bootstrap (GRETL_VAR *var, 
 			     int targ, int shock,
