@@ -6,6 +6,8 @@ version 1.9.5, in progress
   "gretldata"
 - "coint2" (Johansen test): print the log-likelihood, plus improve the
   printing of the Pi matrix when exogenous regressors are present
+- VARs: add $fevd accessor to get the forecast error variance
+  decomposition as a matrix
 - "tobit" command: add options to specify left- and/or right-
   censoring; also add --robust option
 - GUI forecast dialog, for cross-sectional data: give option of showing
